FISH-8652: Downgrade String.isBlank in StringUtil.